@@ -1,3 +1,6 @@
+- summary:
+  o sort service categories, putting "Other" at end (mga#6286)
+
 Version 17.43 - 22 June 2016
 
 - summary:
